--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "cors": "^2.8.5",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
