--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "start": "serve start",
+    "start": "cross-env NODE_ENV=production node server.js",
     "export": "next export",
     "deploy": "yarn run build && yarn run export"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
